--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                     <div class="overlay">
                         <h3>Formulario</h3>
                         <p></p>
-                        <a href="EnviarEmail/index.html" target="_blank">VER PROYECTO</a>
+                        <a href="EnviarEmail/inex.html" target="_blank">VER PROYECTO</a>
                     </div>
                 </div>
                 <div class="proyecto">
@@ -295,7 +295,7 @@
                     <div class="overlay">
                         <h3>Buscador Javascript</h3>
                         <p></p>
-                        <a href="Buscar/index.html"target="_blank">VER PROYECTO</a>
+                        <a href="Buscar/inex.html"target="_blank">VER PROYECTO</a>
                     </div>
                 </div>
                 <div class="proyecto">
@@ -303,7 +303,7 @@
                     <div class="overlay">
                         <h3>Tienda de muebles</h3>
                         <p></p>
-                        <a href="TiendaMuebles/index.html"target="_blank">VER PROYECTO</a>
+                        <a href="TiendaMuebles/inex.html"target="_blank">VER PROYECTO</a>
                     </div>
                 </div>
                 <div class="proyecto">
@@ -311,7 +311,7 @@
                     <div class="overlay">
                         <h3>Crud Veterinaria</h3>
                         <p></p>
-                        <a href="Crud/index.html"target="_blank">VER PROYECTO</a>
+                        <a href="Crud/inex.html"target="_blank">VER PROYECTO</a>
                     </div>
                 </div>
                 
